--- a/prac1/prac1.html
+++ b/prac1/prac1.html
@@ -1,1 +1,121 @@
-
+<!DOCTYPE html>
+<head>
+    <title>Practical 1 - 9 products</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <table>
+        <tr class="table-row img" id="t1">
+            <td class="table-col" id="t11">
+                <img src="img\butter-knife.jpg" alt="1">
+            </td>
+            <td class="table-col" id="t12">
+                <img src="img\Butterfly-knife.jpg" alt="2">
+            </td>
+            <td class="table-col" id="t13">
+                <img src="img\chef-knife.jpg" alt="3">
+            </td>
+        </tr>
+        <tr class="table-row details" id="t2">
+            <td class="table-col" id="t21">
+                <a href="#" class="name"><strong>Butter knife</strong><br></a>
+                <span><em>KITCHEN</em></span>
+                <div class="price">
+                    <div class="actual"><strike><em>$20</em></strike></div>
+                    <a href="#" class="discounted">$10</a>
+                </div>
+            </td>
+            <td class="table-col" id="t22">
+                <a href="#" class="name"><strong>Butterfly knife</strong><br></a>
+                    <span><em>HAND TRICKS</em></span>
+                    <div class="price">
+                        <div class="actual"><strike><em>$50</em></strike></div>
+                        <a href="#" class="discounted">$30</a>
+                    </div>
+            </td>
+            <td class="table-col" id="t23">
+                <a href="#" class="name"><strong>Chef knife</strong><br></a>
+                    <span><em>KITCHEN</em></span>
+                    <div class="price">
+                        <div class="actual"><strike><em>$80</em></strike></div>
+                        <a href="#" class="discounted">$50</a>
+                    </div>
+            </td>
+        </tr>
+        <tr class="table-row img" id="t3">
+            <td class="table-col" id="t31">
+                <img src="img\Dragon-ring-pocket-knife.jpg" alt="4">
+            </td>
+            <td class="table-col" id="t32">
+                <img src="img\Karambit-Knife.jpg" alt="5">
+            </td>
+            <td class="table-col" id="t33">
+                <img src="img\Military-Green-Pocket-Knife.jpeg" alt="6">
+            </td>
+        </tr>
+        <tr class="table-row details" id="t4">
+            <td class="table-col" id="t41">
+                <a href="#" class="name"><strong>Dragon ring pocket knife</strong><br></a>
+                    <span><em>HAND TRICKS</em></span>
+                    <div class="price">
+                        <div class="actual"><strike><em>$180</em></strike></div>
+                        <a href="#" class="discounted">$120</a>
+                    </div>
+            </td>
+            <td class="table-col" id="t42">
+                <a href="#" class="name"><strong>Karambit knife</strong><br></a>
+                    <span><em>HAND TRICKS</em></span>
+                    <div class="price">
+                        <div class="actual"><strike><em>$90</em></strike></div>
+                        <a href="#" class="discounted">$45</a>
+                    </div>
+            </td>
+            <td class="table-col" id="t43">
+                <a href="#" class="name"><strong>Military Green Pocket knife</strong><br></a>
+                    <span><em>SECURITY</em></span>
+                    <div class="price">
+                        <div class="actual"><strike><em>$70</em></strike></div>
+                        <a href="#" class="discounted">$50</a>
+                    </div>
+            </td>
+        </tr>
+        <tr class="table-row img" id="t5">
+            <td class="table-col" id="t51">
+                <img src="img\Sekiryu-Chinese-Kitchen-Chopping-Knife.jpg" alt="7">
+            </td>
+            <td class="table-col" id="t52">
+                <img src="img\swiss-army-pocket-knife.jpg" alt="8">
+            </td>
+            <td class="table-col" id="t53">
+                <img src="img\Weeding-knife.jpg" alt="9">
+            </td>
+        </tr>
+        <tr class="table-row details" id="t6">
+            <td class="table-col" id="t61">
+                <a href="#" class="name"><strong>Sekiryu Chinese Kitchen Chopping knife</strong><br></a>
+                    <span><em>KITCHEN</em></span>
+                    <div class="price">
+                        <div class="actual"><strike><em>$120</em></strike></div>
+                        <a href="#" class="discounted">$80</a>
+                    </div>
+            </td>
+            <td class="table-col" id="t62">
+                <a href="#" class="name"><strong>Swiss army pocket knife</strong><br></a>
+                    <span><em>SECURITY</em></span>
+                    <div class="price">
+                        <div class="actual"><strike><em>$70</em></strike></div>
+                        <a href="#" class="discounted">$45</a>
+                    </div>
+            </td>
+            <td class="table-col" id="t63">
+                <a href="#" class="name"><strong>Weeding knife</strong><br></a>
+                    <span><em>GARDEN</em></span>
+                    <div class="price">
+                        <div class="actual"><strike><em>$30</em></strike></div>
+                        <a href="#" class="discounted">$15</a>
+                    </div>
+            </td>
+        </tr>
+    </table>
+</body>
+</html>
